<resources>
    <string name="app_name">Whosit?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_make_quiz">MakeQuizActivity</string>
    <string name="title_activity_testing_tabs">TestingTabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to createQuizActivity -->
    <string name="done_button">Done</string>
    <string name="next_button">Insert</string>
    <string name="back_button">Back</string>
    <string name="finish_button">Finish</string>
    <string name="enter_quiz_name">Enter a Quiz Name!</string>
    <string name="enter_answers">Enter Question 1 Answers.</string>
    <string name="answer_a">Answer A.</string>
    <string name="answer_b">Answer B.</string>
    <string name="answer_c">Answer C.</string>
    <string name="answer_d">Answer D.</string>
    <string name="enter_result">Result 1</string>
    <string name="spinner_title">Select Result.</string>
    <string name="enter_answer">Enter Answer A for Question 1.</string>
    <string name ="error_answer">Error: You have more Questions than Answers!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usernameEditText">Nchudson95</string>
    <string name="usernameTextView">Username:</string>
    <string name="passwordTextView">Password:</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="passwordEditText">password</string>
    <string name="rUsernameEditText"/>
    <string name="rPasswordEditText"/>
    <string name="rConfirmPasswordEditText"/>
    <string name="rRegisterButton">Register</string>
    <string name="rUsernameTextView">Username:</string>
    <string name="rPasswordTextView">Password:</string>
    <string name="rConfirmPasswordTextView">Confirm Password:</string>
    <string name="incorrectTextView">Username or password incorrect</string>
    <string name="action_addQuiz">Add Quiz</string>
    <string name="action_logout">Logout</string>
    <string name="rErrorTextView">This username is taken</string>
    <string name="action_backToProfile">Back to Profile.</string>
</resources>
